PUT and DELETE Routes added (#11)
* added remaining test cases for put and delete routes for categories

* added route exports for put and delete

* added delete and put route

* modified get route to use id

* added remaining routes

* corrected swagger doc for routes

* added more mocks for tests

* added more messages for sub category route

* corrected swaggerdoc for cash flow
