# apps/money-handler/src/routes/category.ts
@@ -1,6 +1,11 @@
 import express from "express";
 import { Sequelize } from "sequelize";
-import { makeCategoryPostHandler, makeCategoryGetHandler } from "../handlers";
+import {
+  makeCategoryPostHandler,
+  makeCategoryGetHandler,
+  makeCategoryDeleteHandler,
+  makeCategoryPutHandler,
+} from "../handlers";
 
 const makeRouter = (sequelize: Sequelize) => {
   const category = express.Router();
@@ -8,8 +13,12 @@ const makeRouter = (sequelize: Sequelize) => {
   if (CashFlowCategory) {
     const post = makeCategoryPostHandler(sequelize);
     const get = makeCategoryGetHandler(sequelize);
+    const deleteRoute = makeCategoryDeleteHandler(sequelize);
+    const put = makeCategoryPutHandler(sequelize);
     category.post("/category", post);
     category.get("/category", get);
+    category.delete("/category", deleteRoute);
+    category.put("/category", put);
   }
   return category;
 };
